# infrastructure-docs

./: AKASH-INFRASTRUCTURE-DEPLOYMENT.md  DECENTRALIZED-INFRASTRUCTURE-PLAYBOOK.md  FUNNELSWIFT-SQL-HANDOFF.md  HYBRID-LLM-ROUTER.md  PHASE1-DEPLOYMENT-PLAYBOOK.md  README.md
adaswift-recovery/: ADASwift-RECOVERY.md  README.md  SUPABASE_SETUP.sql  design_guidelines.json  integration-events-schema.sql  legal-pages-schema.sql  scan-reports-schema.sql
adaswift-recovery/frontend/: package.json
adaswift-recovery/frontend/src/: App.js  index.js
adaswift-recovery/frontend/src/components/: ClientFormModal.jsx  MasterToggle.jsx  Sidebar.jsx
adaswift-recovery/frontend/src/pages/: AdminLegalPages.jsx  AutomationDashboard.jsx  ClientDetail.jsx  Clients.jsx  Login.jsx  PersonalWebsiteDetail.jsx  (+4 more)
adaswift-recovery/netlify/functions/: funnelswift-webhook.js  monthly-scan-cron.js  trigger-scan.js  widget-automation.js
multidir-api/: Cargo.toml  Dockerfile  README.md  multidir-api-deploy.yml
multidir-api/src/: db.rs  main.rs  models.rs  redis_cache.rs
multidir-api/src/handlers/: business.rs  cache.rs  health.rs  mod.rs  search.rs
multidir-frontend-update/: API_CLIENT.md  DEPLOY.md  next.config.js
multidir-frontend-update/app/businesses/: page.tsx
multidir-frontend-update/components/: BusinessCard.tsx  SearchBox.tsx
multidir-frontend-update/hooks/: useBusinesses.ts
multidir-frontend-update/lib/api/: client.ts
phase1-configs/: README.md  deploy.sh  litellm-config.yaml  n8n-deploy.yml  openclaw-config.json  openclaw-deploy.yml  supabase-schema.sql  vast-setup.sh
(+1 files in other folders)
